# ValidateIT

./: .gitignore  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  TERMS_OF_SERVICE.md
src/: main.rs
src/handlers/: fiscal_code.rs  iban.rs  mod.rs  vat_number.rs
src/models/: fiscal_code.rs  iban.rs  vat_number.rs
src/services/: mod.rs
src/services/fiscal_code/: mod.rs  validator_fiscal_code.rs
src/services/iban/: mod.rs  validator_iban.rs
src/services/vat_number/: mod.rs  validator_vat_number.rs
